# spine

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: roadmap.md
src/: book.rs  cli.rs  lib.rs  main.rs  tui.rs
tests/: integration.rs
tests/data/: multi_book.json  single_book.json
