[package]
name = "spine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
derive = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
