[package]
name = "spine"
version = "0.2.0"
edition = "2024"
description = "spine is your personal command-line librarian!"
homepage = "https://github.com/sharmuz/spine"
repository = "https://github.com/sharmuz/spine"
license = "MIT"
keywords = ["books"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
